# pax-pal-2025

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: project-description.mdc
.github/cloudrun/: service.template.yaml
.github/workflows/: build-push-images.yml
backend/: .dockerignore  Dockerfile  README.md  db.py  main.py  models.py  pyproject.toml  search_utils.py
backend/notebooks/: 01. Prototyping Search Functionality.ipynb
backend/utils/: openai.py
experiments/: pyproject.toml
experiments/notebooks/: 01. Scraping the Exhibitor List.ipynb  02. Parsing App Screenshots.ipynb  03. Scraping the Expo Hall Demos.ipynb  04. Harmonizing Data.ipynb  05. Enriching Data.ipynb  06. Preparing SQLite Database.ipynb  07. Exploring Data.ipynb  08. Parsing the Show Floor Map.ipynb  09. Creating a QR Code.ipynb  10. Adding Missing Games.ipynb
experiments/utils/: miscellaneous.py  openai.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: booths.json
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: AppHeader.jsx  AppNavbar.jsx  GameActions.jsx  ScrollToTop.jsx  SearchResultCard.jsx
frontend/src/pages/: AllGamesPage.jsx  BoothMapHighlightPage.jsx  GameDetailsPage.jsx  InfoPage.jsx  MyGamesPage.jsx  RootPage.jsx  SearchPage.jsx
frontend/src/utils/: localStorageUtils.js
notebooks/: 01. Scraping the Exhibitor List.ipynb
